--- a/binary-hatespeech/badword-on-hatespeech-en/badwords-separate-en.ipynb
+++ b/binary-hatespeech/badword-on-hatespeech-en/badwords-separate-en.ipynb
@@ -350,6 +350,158 @@
     "\n",
     "print(\"Translation complete. Saved as 'data_preprocessed_en_translated.csv'\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11103 entries, 0 to 11102\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   text      11062 non-null  object\n",
+      " 1   hs_class  11103 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 173.6+ KB\n",
+      "Dataset has been formatted and saved as 'data_preprocessed_en_translated_formatted.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import csv\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('/nas.dbms/fathan/test/multilang-hate-models/binary-hatespeech/badword-on-hatespeech-en/data_preprocessed_en_translated.csv', quoting=csv.QUOTE_ALL)\n",
+    "\n",
+    "# Keep only the relevant columns (English text and hs_class)\n",
+    "df = df[['text_translated', 'hs_class']]\n",
+    "\n",
+    "# Rename columns to match the desired format\n",
+    "df = df.rename(columns={'text_translated': 'text'})\n",
+    "\n",
+    "df['text'] = df['text'].str.replace('\"', '', regex=False)  # Remove internal quotes if any\n",
+    "\n",
+    "# Save the new CSV with the correct format\n",
+    "df.to_csv('data_preprocessed_en_translated_formatted.csv', index=False)\n",
+    "\n",
+    "df.info()\n",
+    "\n",
+    "print(\"Dataset has been formatted and saved as 'data_preprocessed_en_translated_formatted.csv'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 24075 entries, 46322 to 122434\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   text      24075 non-null  object\n",
+      " 1   hs_class  24075 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 564.3+ KB\n",
+      "hs_class\n",
+      "positive    12125\n",
+      "negative    11950\n",
+      "Name: count, dtype: int64\n",
+      "Dataset has been formatted and saved as 'val_df.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import pandas as pd\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "\n",
+    "# hs_class is 'negative' WITHOUT SEXUAL WORD \n",
+    "neg_df1 = pd.read_csv('/nas.dbms/fathan/test/multilang-hate-models/binary-hatespeech/badword-on-hatespeech-en/negative_hatespeech_without_sexual_words.csv')\n",
+    "\n",
+    "# hs_class is 'negative' WITH SEXUAL WORD \n",
+    "neg_df = pd.read_csv('/nas.dbms/fathan/test/multilang-hate-models/binary-hatespeech/badword-on-hatespeech-en/negative_hatespeech_with_sexual_words.csv')\n",
+    "\n",
+    "# hs_class is 'positive' WITH SEXUAL WORD \n",
+    "pos_df1 = pd.read_csv('/nas.dbms/fathan/test/multilang-hate-models/binary-hatespeech/badword-on-hatespeech-en/positive_hatespeech_with_sexual_words.csv')\n",
+    "\n",
+    "# hs_class is 'positive' WITHOUT SEXUAL WORD \n",
+    "pos_df = pd.read_csv('/nas.dbms/fathan/test/multilang-hate-models/binary-hatespeech/badword-on-hatespeech-en/positive_hatespeech_without_sexual_words.csv')\n",
+    "\n",
+    "val_df = pd.concat([neg_df1, pos_df1, neg_df, pos_df], ignore_index=True)\n",
+    "\n",
+    "# Undersample using imbalanced-learn\n",
+    "# Create the undersampling object\n",
+    "undersampler = RandomUnderSampler(sampling_strategy='auto', random_state=42)\n",
+    "\n",
+    "# Separate the features (X) and the target (y)\n",
+    "X = val_df['text'].values.reshape(-1, 1)  # Reshape required because RandomUnderSampler expects a 2D array\n",
+    "y = val_df['hs_class']\n",
+    "\n",
+    "# Perform the undersampling\n",
+    "X_resampled, y_resampled = undersampler.fit_resample(X, y)\n",
+    "\n",
+    "# Create a new dataframe with the resampled data\n",
+    "val_df = pd.DataFrame({'text': X_resampled.flatten(), 'hs_class': y_resampled}) # df here is already resampled\n",
+    "\n",
+    "val_df = val_df.sample(frac=0.15, random_state=42)\n",
+    "\n",
+    "# Save the new CSV with the correct format\n",
+    "val_df.to_csv('val_df.csv', index=False)\n",
+    "\n",
+    "val_df.info()\n",
+    "print(val_df['hs_class'].value_counts())\n",
+    "\n",
+    "print(\"Dataset has been formatted and saved as 'val_df.csv'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 24075 entries, 0 to 24074\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   text      24075 non-null  object\n",
+      " 1   hs_class  24075 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 376.3+ KB\n",
+      "hs_class\n",
+      "positive    12125\n",
+      "negative    11950\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('/nas.dbms/fathan/test/multilang-hate-models/binary-hatespeech/badword-on-hatespeech-en/val_df.csv')\n",
+    "\n",
+    "df.info()\n",
+    "# Generate pie chart for 'hs_class' labels\n",
+    "class_counts = df['hs_class'].value_counts()\n",
+    "\n",
+    "print(class_counts)\n"
+   ]
   }
  ],
  "metadata": {
